fix focus contrast for automated checks instance kebab call out menu

--- a/src/common/components/cards/card-kebab-menu-button.scss
+++ b/src/common/components/cards/card-kebab-menu-button.scss
@@ -1,6 +1,7 @@
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 @import '../../styles/colors.scss';
+@import '../../styles/common.scss';
 
 div.kebab-menu-callout {
     box-shadow: 0px 6.4px 14.4px $box-shadow-132, 0px 1.2px 3.6px $box-shadow-108;
@@ -8,6 +9,14 @@ div.kebab-menu-callout {
     border-width: 0px;
     > div {
         border-radius: 4px;
+    }
+
+    button:hover,
+    button:focus {
+        @include fluent-forced-color-adjust-override;
+        @media screen and (forced-colors: active) {
+            color: ActiveText;
+        }
     }
 }
 
@@ -23,6 +32,11 @@ div.kebab-menu-callout {
         }
         &:hover {
             background-color: $menu-item-background-hover;
+            i {
+                @media screen and (forced-colors: active) {
+                    color: ActiveText;
+                }
+            }
         }
         &:active {
             background-color: $menu-item-background-active;
@@ -60,6 +74,12 @@ button.kebab-menu-button {
         color: $always-black;
         svg > circle {
             stroke: $always-black;
+        }
+        @media screen and (forced-colors: active) {
+            color: ActiveText;
+            svg > circle {
+                stroke: ActiveText;
+            }
         }
     }
 
